--- a/VSCode_EX.html
+++ b/VSCode_EX.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1><font color="blue">An Example of VSCode</font></h1>
-   
+        <h2><font color="green">An Example of VSCode</font></h2>
     
     
     </body>
